--- a/app/src/main/res/layout/row_issue_discussion.xml
+++ b/app/src/main/res/layout/row_issue_discussion.xml
@@ -28,7 +28,7 @@
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:id="@+id/avatarAuthor" />
+                android:id="@id/avatarAuthor" />
 
             <TextView
                 android:layout_width="wrap_content"
