--- a/app/src/debug/res/values/colors.xml
+++ b/app/src/debug/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="repos_accent">#FF5722</color>
     <color name="repos_primary_text">#212121</color>
     <color name="repos_secondary_text">#727272</color>
-    <color name="repos_icons">#FFFFFF</color>
+    <color name="repos_icons">#212121</color>
     <color name="repos_divider">#B6B6B6</color>
 
 
