--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -16,4 +16,5 @@
     <item name="listContentFL" type="id">@id/scrollable</item>
     <item name="scrollable" type="id">scroll</item>
     <item name="fabLayout" type="id">fabLayout</item>
+    <item name="action_user_star" type="id">action_user_star</item>
 </resources>
