--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -18,4 +18,5 @@
     <item name="fabLayout" type="id">fabLayout</item>
     <item name="action_user_star" type="id">action_user_star</item>
     <item name="action_repo_star" type="id">action_repo_star</item>
+    <item name="cardsContainerScroll" type="id">cardsContainerScroll</item>
 </resources>
