--- a/app/src/main/res/layout/readme_fragment.xml
+++ b/app/src/main/res/layout/readme_fragment.xml
@@ -8,18 +8,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/webContainer"
-        android:layout_above="@id/toolbar"/>
-<!--
-    <android.support.v7.widget.Toolbar
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@id/toolbar"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:minHeight="?attr/actionBarSize"
-        android:background="@color/white"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>-->
+        android:paddingBottom="?attr/actionBarSize"
+        android:clipToPadding="false"/>
 </RelativeLayout>
