--- a/app/src/main/res/layout/people_activity.xml
+++ b/app/src/main/res/layout/people_activity.xml
@@ -6,23 +6,35 @@
 
     <include layout="@layout/toolbar"/>
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:id="@+id/content">
 
-        <com.alorma.github.ui.view.SlidingTabLayout
-            android:id="@+id/tabStrip"
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </LinearLayout>
+            android:layout_height="match_parent">
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="?attr/colorPrimary"
+                android:orientation="horizontal">
+
+                <com.alorma.github.ui.view.SlidingTabLayout
+                    android:id="@+id/tabStrip"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+            </LinearLayout>
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/pager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
 
-    </android.support.v4.view.ViewPager>
+            </android.support.v4.view.ViewPager>
+        </LinearLayout>
+    </FrameLayout>
 </LinearLayout>
