--- a/app/src/main/res/layout/list_fragment.xml
+++ b/app/src/main/res/layout/list_fragment.xml
@@ -1,14 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@id/listContentFL"
-    android:background="@color/gray_github_light">
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:id="@id/listContentFL"
+             android:background="@color/gray_github_light">
 
     <FrameLayout
         android:id="@+id/listContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            android:id="@+id/progress"
+            android:padding="0dp"
+            app:spb_sections_count="4"
+            app:spb_speed="2.0"
+            app:spb_stroke_width="2dp"
+            app:spb_stroke_separator_length="4dp"
+            app:spb_reversed="false"
+            app:spb_mirror_mode="false"
+            app:spb_progressiveStart_activated="true"
+            app:spb_progressiveStart_speed="1.5"
+            app:spb_progressiveStop_speed="3.4"/>
 
         <android.support.v4.widget.SwipeRefreshLayout
             android:layout_width="match_parent"
@@ -19,16 +36,17 @@
                 android:id="@android:id/list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:drawSelectorOnTop="false" />
+                android:drawSelectorOnTop="false"/>
         </android.support.v4.widget.SwipeRefreshLayout>
     </FrameLayout>
 
-    <include layout="@layout/fab"
+    <include
+        layout="@layout/fab"
         android:layout_width="@dimen/fab"
         android:layout_height="@dimen/fab"
         android:layout_margin="@dimen/gapLarge"
         android:scaleType="centerInside"
-        android:layout_gravity="bottom|right|end" />
+        android:layout_gravity="bottom|right|end"/>
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -42,7 +60,7 @@
             android:layout_height="200dp"
             android:src="@drawable/ic_launcher"
             android:id="@+id/emptyIcon"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -51,7 +69,7 @@
             android:layout_below="@id/emptyIcon"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/gapMedium"
-            android:textSize="@dimen/textSizeLarge" />
+            android:textSize="@dimen/textSizeLarge"/>
     </RelativeLayout>
 
 </FrameLayout>
