--- a/app/src/main/res/xml/main_prefs.xml
+++ b/app/src/main/res/xml/main_prefs.xml
@@ -20,4 +20,8 @@
         android:entryValues="@array/reposDownloadFileTypeValues"
         android:defaultValue="@string/sort_full_name"/>
 
+    <Preference
+        android:title="@string/repo_scope_title"
+        android:key="reauthorize"/>
+
 </PreferenceScreen>
