--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -65,4 +65,5 @@
     <dimen name="translucent_status_dimen_padding_top">0dp</dimen>
     <dimen name="actions_padding">8dp</dimen>
     <dimen name="fab_size_mini_icon">32dp</dimen>
+    <dimen name="header_height">56dp</dimen>
 </resources>
