Commit mode tablet

--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -10,7 +10,8 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.alorma.github.ui.activity.LoginActivity">
+        tools:context="com.alorma.github.ui.activity.LoginActivity"
+        android:background="@color/white">
 
         <ImageView
             android:layout_width="match_parent"
