--- a/app/src/main/res/layout-sw600dp-land/commit_activity.xml
+++ b/app/src/main/res/layout-sw600dp-land/commit_activity.xml
@@ -24,7 +24,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:divider="@drawable/divider_vertical"
+        android:showDividers="end">
 
         <FrameLayout
             android:layout_width="match_parent"
