--- a/app/src/debug/res/values/colors.xml
+++ b/app/src/debug/res/values/colors.xml
@@ -8,24 +8,7 @@
     <color name="repos_accent">#FF5722</color>
     <color name="repos_primary_text">#212121</color>
     <color name="repos_secondary_text">#727272</color>
-    <color name="repos_icons">#FFFFFF</color>
+    <color name="repos_icons">#B6B6B6</color>
     <color name="repos_divider">#B6B6B6</color>
-
-
-    <color name="gists_primary_dark">#E64A19</color>
-    <color name="gists_primary_light">#FFCCBC</color>
-    <color name="gists_accent">#FF9800</color>
-    <color name="gists_primary_text">#212121</color>
-    <color name="gists_secondary_text">#727272</color>
-    <color name="gists_icons">#FFFFFF</color>
-    <color name="gists_divider">#B6B6B6</color>
-    
-    <color name="people_primary_dark">#689F38</color>
-    <color name="people_primary_light">#DCEDC8</color>
-    <color name="people_accent">#CDDC39</color>
-    <color name="people_primary_text">#212121</color>
-    <color name="people_secondary_text">#727272</color>
-    <color name="people_icons">#212121</color>
-    <color name="people_divider">#B6B6B6</color>
     
 </resources>
