--- a/app/src/debug/res/values/config.xml
+++ b/app/src/debug/res/values/config.xml
@@ -2,4 +2,5 @@
 <resources>
 
     <string name="app_name">Gitskarios DEV</string>
+    <string name="account_type">com.alorma.github.debug.account</string>
 </resources>
