--- a/app/src/release/res/values/config.xml
+++ b/app/src/release/res/values/config.xml
@@ -2,5 +2,6 @@
 <resources>
 
     <string name="app_name">GitSkarios</string>
+    <string name="account_type">com.alorma.github.account</string>
 
 </resources>
