Gists app, sharing login activity

--- a/app/src/release/res/values/config.xml
+++ b/app/src/release/res/values/config.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <string name="app_name">GitSkarios</string>
+    <string name="account_name">Github account</string>
     <string name="account_type">com.alorma.github.account</string>
 
 </resources>
