--- a/app/src/release/res/xml/account_authenticator.xml
+++ b/app/src/release/res/xml/account_authenticator.xml
@@ -3,4 +3,4 @@
     android:accountType="@string/account_type"
     android:icon="@drawable/ic_launcher"
     android:smallIcon="@drawable/ic_launcher"
-    android:label="@string/app_name" />
+    android:label="@string/account_name" />
