--- a/gistsapp/src/main/res/layout/activity_main.xml
+++ b/gistsapp/src/main/res/layout/activity_main.xml
@@ -8,6 +8,22 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/content" />
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/recycler" />
+
+        <com.getbase.floatingactionbutton.AddFloatingActionButton xmlns:fab="http://schemas.android.com/apk/res-auto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fab:fab_colorNormal="?attr/colorControlNormal"
+            fab:fab_colorPressed="?attr/colorControlHighlight"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:id="@id/fabButton"
+            android:layout_gravity="right|bottom"
+            android:layout_margin="16dp" />
+    </FrameLayout>
 </LinearLayout>
