--- a/gistsapp/src/main/res/layout/row_gist_detail_text.xml
+++ b/gistsapp/src/main/res/layout/row_gist_detail_text.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,26 +15,41 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:padding="@dimen/gapMedium">
+            android:orientation="vertical">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/textFileName"
-                style="@style/TextAppearance.AppCompat.Headline"
-                android:textColor="?attr/colorControlNormal"
-                tools:text="MyFile.java" />
-
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/textContent"
-                style="@style/TextAppearance.AppCompat.Caption"
-                android:textColor="@color/secondary_text"
-                android:textSize="@dimen/textSizeSmall"
-                android:layout_marginTop="@dimen/gapMedium" />
+                android:orientation="vertical"
+                android:padding="@dimen/gapMedium">
 
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textFileName"
+                    style="@style/TextAppearance.AppCompat.Headline"
+                    android:textColor="?attr/colorControlNormal"
+                    tools:text="MyFile.java" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/textContent"
+                    style="@style/TextAppearance.AppCompat.Caption"
+                    android:textColor="@color/secondary_text"
+                    android:textSize="@dimen/textSizeSmall"
+                    android:layout_marginTop="@dimen/gapMedium" />
+            </LinearLayout>
+
+            <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@id/toolbar"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:minHeight="?attr/actionBarSize"
+                android:background="@color/gray_github_light_selected"
+                app:theme="@style/GistFileRowToolbar"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
