Add editor. Add note empty discard

--- a/gistsapp/src/main/res/values/colors.xml
+++ b/gistsapp/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="accent_dark">#ffd74545</color>
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#727272</color>
+    <color name="third_text">#B6B6B6</color>
     <color name="icons">#FFFFFF</color>
     <color name="divider">#B6B6B6</color>
 
