--- a/gistsapp/src/main/res/layout/row_gist_detail_text.xml
+++ b/gistsapp/src/main/res/layout/row_gist_detail_text.xml
@@ -13,7 +13,9 @@
         android:minHeight="120dp"
         card_view:cardUseCompatPadding="true"
         card_view:cardElevation="4dp"
-        card_view:cardCornerRadius="3dp">
+        card_view:cardCornerRadius="3dp"
+        android:id="@+id/cardView"
+        android:foreground="?android:selectableItemBackground">
 
         <LinearLayout
             android:layout_width="match_parent"
