--- a/gistsapp/src/main/res/layout/activity_create.xml
+++ b/gistsapp/src/main/res/layout/activity_create.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -10,10 +11,48 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:maxWidth="@dimen/editor_popup_width"
+            card_view:cardUseCompatPadding="true"
+            card_view:cardElevation="4dp"
+            card_view:cardCornerRadius="3dp"
+            android:id="@+id/cardGistData"
+            android:layout_margin="@dimen/gapMedium"
+            android:layout_marginBottom="0dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="@dimen/gapMedium">
+
+                <android.support.v7.internal.widget.TintEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/gist_description"
+                    android:id="@+id/gistDescription"
+                    android:maxLines="4"/>
+
+                <android.support.v7.widget.SwitchCompat
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/gist_private"
+                    android:layout_marginTop="@dimen/gapMedium"
+                    style="@style/Base.TextAppearance.AppCompat.Subhead"
+                    android:paddingLeft="@dimen/gapSmall"
+                    android:checked="true"
+                    android:id="@+id/gistPrivate" />
+
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/recycler" />
+            android:id="@+id/recycler"
+            android:layout_below="@+id/cardGistData" />
 
         <com.getbase.floatingactionbutton.AddFloatingActionButton xmlns:fab="http://schemas.android.com/apk/res-auto"
             android:layout_width="wrap_content"
