--- a/gistsapp/src/main/res/layout/row_gist_detail_text.xml
+++ b/gistsapp/src/main/res/layout/row_gist_detail_text.xml
@@ -5,7 +5,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/gapMedium">
+    android:padding="@dimen/gapMedium"
+    android:paddingTop="0dp">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
