Add content view

--- a/gistsapp/src/main/res/values/colors.xml
+++ b/gistsapp/src/main/res/values/colors.xml
@@ -11,6 +11,8 @@
     <color name="icons">#FFFFFF</color>
     <color name="divider">#B6B6B6</color>
 
+    <color name="white">#FFFFFF</color>
+
     <color name="privateGist">#a1882b</color>
     <color name="privateGistBackground">#f8eeca</color>
 
