--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -66,4 +66,7 @@
     <dimen name="actions_padding">8dp</dimen>
     <dimen name="fab_size_mini_icon">32dp</dimen>
     <dimen name="header_height">56dp</dimen>
+
+    <dimen name="editor_popup_width">600dp</dimen>
+    <dimen name="editor_popup_heigth">400dp</dimen>
 </resources>
