--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -6,10 +6,41 @@
     tools:context="com.alorma.github.ui.activity.LoginActivity"
     android:orientation="vertical">
 
-    <WebView
+    <include layout="@layout/toolbar" />
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/webview" />
+        tools:context="com.alorma.github.ui.activity.LoginActivity"
+        android:orientation="vertical">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/issue_discussion_header_fold"
+            android:id="@+id/linearLayout"
+            android:background="@color/primary"
+            android:orientation="vertical"
+            android:gravity="center">
 
-</FrameLayout>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Login"
+                android:id="@+id/login"
+                android:layout_gravity="center_horizontal" />
+        </LinearLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/recycler"
+            android:paddingLeft="@dimen/gapXLarge"
+            android:paddingRight="@dimen/gapXLarge"
+            android:paddingBottom="@dimen/gapXLarge"
+            android:paddingTop="@dimen/gapMedium"
+            android:layout_below="@+id/linearLayout" />
+
+    </RelativeLayout>
+</LinearLayout>
