--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,41 +6,43 @@
     tools:context="com.alorma.github.ui.activity.LoginActivity"
     android:orientation="vertical">
 
-    <include layout="@layout/toolbar" />
-
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="140dp"
         tools:context="com.alorma.github.ui.activity.LoginActivity"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:id="@+id/loginLayout"
+        android:background="?attr/colorPrimary">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/issue_discussion_header_fold"
-            android:id="@+id/linearLayout"
-            android:background="@color/primary"
-            android:orientation="vertical"
-            android:gravity="center">
+        <include layout="@layout/toolbar" />
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Login"
-                android:id="@+id/login"
-                android:layout_gravity="center_horizontal" />
-        </LinearLayout>
-
-        <android.support.v7.widget.RecyclerView
+        <TextView
+            android:id="@+id/login"
+            android:background="?android:selectableItemBackground"
+            android:fontFamily="sans-serif"
+            android:lines="1"
+            android:layout_marginLeft="56dp"
+            android:layout_marginRight="56dp"
+            android:layout_toRightOf="@id/icon"
+            android:layout_toEndOf="@id/icon"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/recycler"
-            android:paddingLeft="@dimen/gapXLarge"
-            android:paddingRight="@dimen/gapXLarge"
-            android:paddingBottom="@dimen/gapXLarge"
-            android:paddingTop="@dimen/gapMedium"
-            android:layout_below="@+id/linearLayout" />
-
+            android:textSize="@dimen/textSizeMedium"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:singleLine="true"
+            android:text="@string/add_account" />
     </RelativeLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/recycler"
+        android:paddingLeft="@dimen/gapXLarge"
+        android:paddingStart="@dimen/gapXLarge"
+        android:paddingRight="@dimen/gapXLarge"
+        android:paddingEnd="@dimen/gapXLarge"
+        android:paddingBottom="@dimen/gapXLarge"
+        android:paddingTop="@dimen/gapMedium" />
+
 </LinearLayout>
