--- a/app/src/main/res/layout/row_repo.xml
+++ b/app/src/main/res/layout/row_repo.xml
@@ -46,7 +46,9 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_toLeftOf="@+id/infos"
-            android:layout_toStartOf="@+id/infos" />
+            android:layout_toStartOf="@+id/infos"
+            android:fontFamily="sans-serif"
+            android:lines="1" />
 
         <LinearLayout
             android:layout_width="wrap_content"
