--- a/app/src/main/res/layout/fab.xml
+++ b/app/src/main/res/layout/fab.xml
@@ -4,8 +4,8 @@
                                                        xmlns:fab="http://schemas.android.com/apk/res-auto"
                                                        android:layout_width="wrap_content"
                                                        android:layout_height="wrap_content"
-                                                       fab:fab_colorNormal="?attr/colorAccent"
-                                                       fab:fab_colorPressed="?attr/colorPrimaryDark"
+                                                       fab:fab_colorNormal="?attr/colorControlNormal"
+                                                       fab:fab_colorPressed="?attr/colorControlHighlight"
                                                        android:layout_alignParentBottom="true"
                                                        android:layout_centerHorizontal="true"
                                                        android:id="@id/fabButton"/>
