--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,8 +5,10 @@
     <color name="gray_github_light_selected">#ffdedede</color>
     
     <color name="white">#FFFFFF</color>
-    <color name="issue_state_open">#54A141</color>
+    <color name="issue_state_open">#ff54A141</color>
     <color name="issue_state_close">#ffd67a4c</color>
+    <color name="issue_state_open_dark">#ff3d7b3d</color>
+    <color name="issue_state_close_dark">#ffa2553d</color>
     <color name="defaultEnchancedColor">#00ff0000</color>
 
     <color name="privateRepo">#a1882b</color>
